<resources>
    <string name="app_name">ToDoListPractice</string>
    <string name="main_title">To Do List</string>
    <string name="main_titleTwo">Start adding your lists</string>
    <string name="popup_title">Popup Title</string>
    <string name="popup_hint_name">Enter list name</string>
    <string name="popup_button">Button</string>
    <string name="popup_addTitle">Add New ToDo List</string>
    <string name="popup_saveButton">Save</string>
    <string name="listRow_listName">List Name</string>
    <string name="listRow_listDateAdded">Date Added</string>
    <string name="popupSure_text">Are you sure?</string>
    <string name="popupSure_No">No</string>
    <string name="popupSure_yes">Yes</string>
    <string name="popup_updateTitle">Update ToDo List</string>
    <string name="popup_updateButton">Update</string>
    <string name="itemRow_text">ToDo Item</string>
    <string name="popupItem_title">Add ToDo Item</string>
    <string name="popupItem_hint_name">Enter to-do item name</string>
    <string name="popupItem_button">Add</string>
</resources>
