<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/popup_layout">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp">

            <TextView
                android:id="@+id/popup_title"
                android:text="@string/popup_title"
                android:textStyle="italic"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"/>

            <EditText
                android:id="@+id/popup_listName"
                android:layout_below="@id/popup_title"
                android:hint="@string/popup_hint_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/popup_button"
                android:layout_below="@id/popup_listName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:text="@string/popup_button"
                android:textSize="14sp"
                android:textStyle="bold"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>