<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/popupItem_layout">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp">

            <TextView
                android:id="@+id/popupItem_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/architects_daughter"
                android:text="@string/popupItem_title"
                android:textSize="18sp"
                android:textStyle="italic|bold" />

            <EditText
                android:id="@+id/popupItem_itemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/popupItem_title"
                android:fontFamily="@font/architects_daughter"
                android:hint="@string/popupItem_hint_name"
                android:inputType="text" />

            <Button
                android:id="@+id/popupItem_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/popupItem_itemName"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:background="@color/colorPrimary"
                android:fontFamily="@font/architects_daughter"
                android:text="@string/popupItem_button"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>